<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/list_add"
        android:title="@string/list_menu_add"
        android:icon="@android:drawable/ic_menu_add" />
    <item android:id="@+id/list_backup"
        android:title="@string/list_menu_backup"
        android:icon="@android:drawable/ic_menu_save" />
    <item android:id="@+id/list_export"
        android:title="@string/list_menu_export"
        android:icon="@android:drawable/ic_menu_upload" />
    <item android:id="@+id/list_search"
        android:title="@string/list_menu_search"
        android:icon="@android:drawable/ic_menu_search" />
    <item android:id="@+id/list_restore"
        android:title="@string/list_menu_restore"
        android:icon="@android:drawable/stat_sys_download" />
    <item android:id="@+id/list_import"
        android:title="@string/list_menu_import"
        android:icon="@android:drawable/stat_sys_download" />
    <!-- The items below are used in edit mode only.  The items above are
         used in non-edit mode only. -->
    <item android:id="@+id/list_save"
        android:title="@string/list_menu_save"
        android:icon="@android:drawable/ic_menu_save"
        />
    <item android:id="@+id/list_generate_password"
        android:title="@string/list_menu_generate_password"
        android:icon="@android:drawable/ic_menu_edit"
      />
    <item android:id="@+id/list_discard"
        android:title="@string/list_menu_discard"
        android:icon="@android:drawable/ic_menu_revert"
         />
</menu>
